fix alignment

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -11,8 +11,11 @@ a {
   color: #0a0 !important;
 }
 .App {
-  text-align: center;
-  color: white;
+  text-align: center;;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color:white;
   font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 .CImg.inverted {
@@ -73,6 +76,8 @@ a {
   border-color: white;
 }
 .PHold {
+  max-width: 800px;
+  margin: 2px 0;
   width: 50%;
   border-radius: 3px;
   border-width:0;
